--- a/ddap-v2-process/src/main/resources/static/html/product.html
+++ b/ddap-v2-process/src/main/resources/static/html/product.html
@@ -8,6 +8,7 @@
 <link href="/resources/css/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="/resources/css/dataTables.bootstrap.min.css" rel="stylesheet" />
 <link href="/resources/css/platform.css" rel="stylesheet">
+
 </head>
 <body>
   <header>
@@ -24,6 +25,9 @@
 	      <li class="col-md-3">
 	        <a href="rule.html">规则管理</a>
 	      </li>
+	      <li class="col-md-3">
+	        <a href="account.html">用户管理</a>
+	      </li>
 	    </ul>
 	  </nav>
   	  <form class="col-md-3 form-inline" role="search">
@@ -32,7 +36,13 @@
         </div>
   	  </form>
   	  <div class="col-md-1 u-panel">
-  	    <a href="#">登录</a>
+  	    <a href="#">{{online}}</a>
+  	    <div class="logout-panel">
+          <ul>
+            <li><a href="swagger-ui.html" >接口文档</a></li>
+            <li @click="logout()"><a href="#">退出</a></li>
+          </ul>
+        </div>
   	  </div>
  
   	</div>
@@ -59,10 +69,10 @@
 	    		<thead>
 	    			<tr>
 	    				<th class="col-md-2" >产品编号</th>
-	    				<th class="col-md-2" >产品名称</th>
-		    			<th class="col-md-3" >产品描述</th>
+	    				<th class="col-md-3" >产品名称</th>
+		    			<th class="col-md-4" >产品描述</th>
 		    			<!-- <th class="col-md-3" style="min-width:150px;">应用地址</th> -->
-		    			<th class="col-md-4" >操作</th>
+		    			<th class="col-md-1" >操作</th>
 		    		</tr>
 	    		</thead>
 	    		<tbody>
@@ -74,30 +84,30 @@
         </div>
         <div id="detail" class="tab-pane fade">
           <fieldset>
-            <div class="col-md-12 border-bottom">
+            <div class="col-md-12">
               <h4>基本信息</h4>
-              <div class="col-md-3">
+              <div v-show="isNotNew" class="col-md-6">
 	            <label>编号</label>
 	            <div class="col-md-10">
 	              <input type="text" v-model="product.id"  readonly="true" class="form-control">
 	            </div>
 	          </div>
-	          <div class="col-md-3">
+	          <div class="col-md-6">
 	            <label>名称</label>
 	            <div class="col-md-10">
 	              <input type="text" v-model="product.name" class="form-control" >
 	            </div>
 	          </div>
-	          <div class="col-md-3">
+	          <div class="col-md-6">
 	            <label>描述</label>
 	            <div class="col-md-10">
 	              <input type="text" v-model="product.description" class="form-control" >
 	            </div>
 	          </div>
             </div>
-            <div class="col-md-6 border-right">
+            <div class="col-md-12">
               <h4>产品描述属性</h4>
-              <table>
+              <table class="attrTable">
               	<thead>
               	  <tr>
               	    <th>属性名称</th>
@@ -122,9 +132,9 @@
               	</tbody>
               </table>
             </div>
-            <div class="col-md-6 border-left">
+            <div class="col-md-12">
               <h4>产品数据属性</h4>
-              <table>
+              <table class="attrTable">
               	<thead>
               	  <tr>
               	    <th>属性名称</th>
@@ -150,7 +160,7 @@
               </table>
             </div>
           </fieldset>
-          <div class="op-save">
+          <div class="col-md-1 op-save">
             <button class="btn btn-primary" @click="save()">保存</button>
           </div>
         </div>
@@ -188,6 +198,7 @@
   <script src="/resources/js/bootstrap.js"></script>
   <script src="/resources/js/vue.js"></script>
   <script src="/resources/js/jquery.dataTables.min.js"></script>
+  <script src="/resources/js/iot.public.js"></script>
   <script>
     $(function(){
 		$("#searchInput").keyup( function() {
@@ -195,7 +206,7 @@
 		})
 		$("#detailTab").click(function(){
 			if(listTable.rowData&&listTable.rowData.id){
-				detailVue.setProduct(listTable.rowData)
+				detailVue.update(listTable.rowData)
 			}else{
 				detailVue.add()
 			}
@@ -233,7 +244,8 @@
       			descAttributes:[],
       			dataAttributes:[]
       	  	},
-      	  	initProduct:{}
+      	  	initProduct:{},
+      	    isNotNew:false
         },
         created: function () {
         	this.initProduct = this.product
@@ -266,10 +278,12 @@
         		this.product.dataAttributes.splice(index,1)
           	},
           	add: function() {
+          		this.isNotNew=false
           		this.init()
           		this.apiUrl='/product/new'
           	},
           	update: function(p) {
+          		this.isNotNew=true
           		this.setProduct(p)
           		this.apiUrl='/product/update'
           	},
@@ -317,10 +331,7 @@
     			//"ajax": "user/personUerList",
     			"ajax":{
     				"url":"/product/list",
-    				"contentType": "application/json",
-    				"data":function(d){
-    					return d.data
-    				}
+    				"contentType": "application/json"
     			},
     			"columnDefs": [
                 	{	                          
