--- a/ddap-v2-process/src/main/resources/static/html/account.html
+++ b/ddap-v2-process/src/main/resources/static/html/account.html
@@ -9,9 +9,6 @@
 <link href="/resources/css/dataTables.bootstrap.min.css" rel="stylesheet" />
 <link href="/resources/css/platform.css" rel="stylesheet">
 
-<style type="text/css">
-	
-</style>
 </head>
 <body>
   <header>
@@ -62,7 +59,7 @@
           <a id="detailTab" href="#detail" data-toggle="tab">账号详情</a>
         </li>
         <li>
-          <a id="newTab" href="#detail" data-toggle="tab">新建账号</a>
+          <a id="newTab" v-show="isAdmin" href="#detail" data-toggle="tab">新建账号</a>
         </li>
       </ul>
       <div class="tab-content">
@@ -225,7 +222,7 @@
 	})
   
     var detailVue = new Vue({
-        el: '#detail',
+        el: '#main',
         data: {
         	apiUrl:'',
       	  	account: {
@@ -240,10 +237,17 @@
       			dataPostUrl:''
       	  	},
       	  	initAccount:{},
-      	    isUpdate:false
+      	    isUpdate:false,
+      	    isAdmin:false
         },
         created: function () {
         	this.initAccount = this.account
+        	var _this = this
+        	$.get('/account/session', function(data){
+				 if('0'===data.code&&data.data.role==='A'){
+					 _this.isAdmin = true
+				 }
+			 })
         },
         methods: {
         	init: function() {
@@ -361,7 +365,7 @@
     			"bStateSave": true,
     			"oLanguage": {
 					"sLengthMenu": "每页显示 _MENU_ 条记录",
-				    "sZeroRecords": "<p>对不起，查询不到任何相关数据</p> <span onclick='application.addModal();' class='btn btn-default btn-xs'>新增</span>",
+				    "sZeroRecords": "<p>暂无数据</p> <span onclick='listTable.addModal();' class='btn btn-default btn-xs'>新增</span>",
 				    "sInfo": "当前显示 _START_ 到 _END_ 条，共 _TOTAL_ 条记录",
 				    "sInfoEmtpy": "找不到相关数据",
 				    "sInfoFiltered": "数据表中共为 _MAX_ 条记录)",
@@ -386,6 +390,9 @@
     		},
     		reload:function(){
     			this.table.ajax.reload()
+	    	},
+	    	addModal:function(){
+	    		$("#newTab").click()
 	    	},
 	    	deleteModal:function(row){
 	    		if(!row){
