--- a/ddap-v2-process/src/main/resources/static/html/login.html
+++ b/ddap-v2-process/src/main/resources/static/html/login.html
@@ -4,8 +4,10 @@
 <meta charset="UTF-8">
 <title>物联网数据平台</title>
 
+<link rel="shortcut icon" href="/resources/images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/resources/images/favicon.ico" type="image/x-icon">
 <link href="/resources/css/bootstrap.css" rel="stylesheet">
-<link href="/resources/css/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="/resources/css/jquery.dataTables.min.css" rel="stylesheet" >
 <link href="/resources/css/login.css" rel="stylesheet">
 </head>
 <body>
